--- a/Angular JS AutoCompl1/AngularJSAutocompleteInMVCWithWebAPI/AngularJSAutocompleteInMVCWithWebAPI.csproj
+++ b/Angular JS AutoCompl1/AngularJSAutocompleteInMVCWithWebAPI/AngularJSAutocompleteInMVCWithWebAPI.csproj
@@ -217,6 +217,7 @@
     <Content Include="Content\bootstrap.css.map" />
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
+    <None Include="Properties\PublishProfiles\a.pubxml" />
     <None Include="scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="scripts\Home.js" />
     <Content Include="scripts\i18n\angular-locale_aa-dj.js" />
